--- a/src/strategy/full/styles.module.scss
+++ b/src/strategy/full/styles.module.scss
@@ -1,7 +1,4 @@
-$navHeight: 50px;
-$width: 250px;
-$transitionDuration: 0.3s;
-
+@import './variables.scss';
 @import '../../styles.module.scss';
 
 .Nav {
