--- a/src/strategy/full/variables.scss
+++ b/src/strategy/full/variables.scss
@@ -1,3 +1,3 @@
-$navHeight: 50px;
-$width: 250px;
-$transitionDuration: 0.3s;
+$navHeight: 50px !default;
+$width: 250px !default;
+$transitionDuration: 0.3s !default;
