--- a/example/src/components/Layout/styles.scss
+++ b/example/src/components/Layout/styles.scss
@@ -40,3 +40,4 @@ h6 {
 @import 'bulma/sass/elements/title.sass';
 @import 'bulma/sass/layout/hero.sass';
 @import 'bulma/sass/elements/container.sass';
+@import 'bulma/sass/elements/button.sass';
