--- a/src/Hamburger/styles.module.scss
+++ b/src/Hamburger/styles.module.scss
@@ -1,13 +1,19 @@
 $color: #fff !default;
 
 .Hamburger {
+  display: block;
   position: relative;
   width: 30px;
   height: 24px;
+  background: none;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
 }
 
 .Hamburger__line {
   position: absolute;
+  left: 0;
   height: 4px;
   width: 100%;
   background: $color;
