--- a/src/strategy/uncover/left/styles.module.scss
+++ b/src/strategy/uncover/left/styles.module.scss
@@ -1,20 +1,20 @@
 @import '../styles.module.scss';
 
-.Sidebar--left {
+.Sidebar {
   top: 0;
   left: 0;
   width: $width;
   height: calc(100% + 60px);
 }
 
-.Canvas--left.Canvas--open {
+.Canvas.Canvas--open {
   transform: translate3d($width, 0, 0);
 }
 
-.Nav--left.Nav--open {
+.Nav.Nav--open {
   transform: translate3d($width, 0, 0);
 }
 
-.Overlay--left.Overlay--open {
+.Overlay.Overlay--open {
   transform: translate3d($width, 0, 0);
 }
