--- a/src/strategy/uncover/top/styles.module.scss
+++ b/src/strategy/uncover/top/styles.module.scss
@@ -1,10 +1,10 @@
 @import '../styles.module.scss';
 
-.Sidebar--top {
+.Sidebar {
   top: 0;
   width: 100%;
 }
 
-.Sidebar--top.Sidebar--open {
+.Sidebar.Sidebar--open {
   transform: translate3d(0, 0, 0);
 }
