--- a/src/strategy/full/left/styles.module.scss
+++ b/src/strategy/full/left/styles.module.scss
@@ -1,6 +1,6 @@
 @import '../styles.module.scss';
 
-.Sidebar--left {
+.Sidebar {
   top: $navHeight;
   bottom: 0;
   left: 0;
@@ -8,6 +8,6 @@
   transition: right $transitionDuration ease;
 }
 
-.Sidebar--left.Sidebar--open {
+.Sidebar.Sidebar--open {
   right: 0;
 }
