--- a/src/strategy/push/top/styles.module.scss
+++ b/src/strategy/push/top/styles.module.scss
@@ -1,11 +1,11 @@
 @import '../styles.module.scss';
 
-.Sidebar--top {
+.Sidebar {
   top: 0;
   transform: translate3d(0, -100%, 0);
   width: 100%;
 }
 
-.Sidebar--top.Sidebar--open {
+.Sidebar.Sidebar--open {
   transform: translate3d(0, 0, 0);
 }
