--- a/src/strategy/uncover/bottom/styles.module.scss
+++ b/src/strategy/uncover/bottom/styles.module.scss
@@ -1,10 +1,10 @@
 @import '../styles.module.scss';
 
-.Sidebar--bottom {
+.Sidebar {
   bottom: 0;
   width: 100%;
 }
 
-.Sidebar--bottom.Sidebar--open {
+.Sidebar.Sidebar--open {
   transform: translate3d(0, 0, 0);
 }
