--- a/src/strategy/uncover/right/styles.module.scss
+++ b/src/strategy/uncover/right/styles.module.scss
@@ -1,20 +1,20 @@
 @import '../styles.module.scss';
 
-.Sidebar--right {
+.Sidebar {
   top: 0;
   right: 0;
   width: $width;
   height: calc(100% + 60px);
 }
 
-.Canvas--right.Canvas--open {
+.Canvas.Canvas--open {
   transform: translate3d(-$width, 0, 0);
 }
 
-.Nav--right.Nav--open {
+.Nav.Nav--open {
   transform: translate3d(-$width, 0, 0);
 }
 
-.Overlay--right.Overlay--open {
+.Overlay.Overlay--open {
   transform: translate3d(-$width, 0, 0);
 }
