--- a/src/strategy/full/bottom/styles.module.scss
+++ b/src/strategy/full/bottom/styles.module.scss
@@ -5,9 +5,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  transition: top $transitionDuration ease;
+  transition: top $transitionDuration ease, visibility $transitionDuration ease;
 }
 
-.Sidebar.Sidebar--open {
+.Sidebar--open {
   top: $navHeight;
 }
