--- a/src/strategy/uncover/right/styles.module.scss
+++ b/src/strategy/uncover/right/styles.module.scss
@@ -7,14 +7,14 @@
   height: calc(100% + 60px);
 }
 
-.Canvas.Canvas--open {
+.Canvas--open {
   transform: translate3d(-$width, 0, 0);
 }
 
-.Nav.Nav--open {
+.Nav--open {
   transform: translate3d(-$width, 0, 0);
 }
 
-.Overlay.Overlay--open {
+.Overlay--open {
   transform: translate3d(-$width, 0, 0);
 }
