--- a/src/Canvas/styles.module.scss
+++ b/src/Canvas/styles.module.scss
@@ -2,7 +2,7 @@
   transition: transform $transitionDuration ease;
 }
 
-.Canvas.Canvas--open {
+.Canvas--open {
   overflow: hidden;
   height: 100%;
 }
