--- a/src/Overlay/styles.module.scss
+++ b/src/Overlay/styles.module.scss
@@ -5,7 +5,6 @@
   right: 0;
   bottom: 0;
   z-index: 1;
-  background: rgba(10, 10, 10, 0.5);
   visibility: hidden;
   opacity: 0;
   transition: transform $transitionDuration, opacity $transitionDuration,
@@ -15,6 +14,10 @@
 }
 
 .Overlay--open {
-  visibility: visible;
   opacity: 1;
+  visibility: visible;
+}
+
+.Overlay--dim {
+  background: rgba(10, 10, 10, 0.5);
 }
