--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,12 +1,5 @@
+@import './Factory/styles.module.scss';
 @import './Sidebar/styles.module.scss';
 @import './Nav/styles.module.scss';
 @import './Canvas/styles.module.scss';
 @import './Overlay/styles.module.scss';
-
-.NavPush {
-  position: relative;
-}
-
-.NavPush--open {
-  overflow-x: hidden;
-}
