--- a/example/src/components/Layout/styles.scss
+++ b/example/src/components/Layout/styles.scss
@@ -12,8 +12,8 @@ $grey-light: $beige-light;
 $link: $pink;
 
 // Update some of Bulma's component variables
-$primary: #544f4a;
-$body-background-color: $beige-lighter;
+$primary: #d0d2e0;
+$body-background-color: #fff;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
