--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,5 +1,5 @@
 @import './Factory/styles.module.scss';
 @import './Sidebar/styles.module.scss';
-@import './Nav/styles.module.scss';
+@import './Header/styles.module.scss';
 @import './Canvas/styles.module.scss';
 @import './Overlay/styles.module.scss';
