--- a/src/strategy/overlay/right/styles.module.scss
+++ b/src/strategy/overlay/right/styles.module.scss
@@ -1,12 +1,12 @@
 @import '../styles.module.scss';
 
-.Sidebar {
+.Nav {
   top: 0;
   right: -$width;
   width: $width;
   height: 100%;
 }
 
-.Sidebar--open {
+.Nav--open {
   transform: translate3d(-$width, 0, 0);
 }
