--- a/src/strategy/overlay/top/styles.module.scss
+++ b/src/strategy/overlay/top/styles.module.scss
@@ -1,11 +1,11 @@
 @import '../styles.module.scss';
 
-.Sidebar {
+.Nav {
   top: 0;
   transform: translate3d(0, -100%, 0);
   width: 100%;
 }
 
-.Sidebar--open {
+.Nav--open {
   transform: translate3d(0, 0, 0);
 }
