--- a/src/strategy/uncover/top/styles.module.scss
+++ b/src/strategy/uncover/top/styles.module.scss
@@ -1,10 +1,10 @@
 @import '../styles.module.scss';
 
-.Sidebar {
+.Nav {
   top: 0;
   width: 100%;
 }
 
-.Sidebar--open {
+.Nav--open {
   transform: translate3d(0, 0, 0);
 }
