--- a/src/strategy/push/right/styles.module.scss
+++ b/src/strategy/push/right/styles.module.scss
@@ -1,5 +1,9 @@
 @import '../styles.module.scss';
 
+.NavPush {
+  overflow-x: hidden;
+}
+
 .Canvas--open {
   transform: translate3d(-$width, 0, 0);
 }
