Add transitionend to determine when transition is taking place
This will be useful to handle the fixbox transformed div with fixed
children problem because we can apply an intermediate class during the
transition that is responsible for setting the height of the div

--- a/example/src/components/Dashboard/styles.module.scss
+++ b/example/src/components/Dashboard/styles.module.scss
@@ -23,3 +23,12 @@
   left: 0;
   right: 0;
 }
+
+#foo {
+  background: red;
+  bottom: 100px;
+  right: 200px;
+  position: fixed;
+  width: 200px;
+  height: 200px;
+}
