--- a/src/strategy/uncover/styles.module.scss
+++ b/src/strategy/uncover/styles.module.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
-@import '../../styles.module.scss';
+@import '../../renderer/OffCanvas/styles.module.scss';
 
 .Nav {
   z-index: -1;
