Update primary color

--- a/example/src/components/Layout/variables.scss
+++ b/example/src/components/Layout/variables.scss
@@ -2,7 +2,7 @@ $family-sans-serif: 'Roboto', sans-serif;
 $family-heading: 'Aleo';
 
 // Update some of Bulma's component variables
-$primary: #abc5d4;
+$primary: #a1c9e0;
 $secondary: darken($primary, 45%);
 $body-color: $secondary;
 $button-color: $secondary;
